SI: Added the functionality for retaining the user To-do(s) List in the database.

--- a/src/main/webapp/WEB-INF/common/navigation.jspf
+++ b/src/main/webapp/WEB-INF/common/navigation.jspf
@@ -1,6 +1,6 @@
 <body>
 		<nav class="navbar navbar-default">
-			<a href="/list-todo.do" class="navbar-brand">Swap's</a>
+			<a href="/list-todo.do" class="navbar-brand">Swap</a>
 			
 			<ul class="nav navbar-nav">
 				<li> <a href="list-todo.do">Home</a></li>
